# const-it-rs

./: Cargo.toml  README.md
src/: lib.rs  slice.rs  tests.rs
