[package]
name = "const-it"
version = "0.1.0"
edition = "2021"
authors = ["Maia S. R."]
license = "Zlib OR MIT OR Apache-2.0"
description = "Utilities for const evaluation; slicing, error handling"
repository = "https://github.com/maia-s/const-it-rs"
documentation = "https://docs.rs/const-it"
keywords = ["const", "slice"]
categories = ["no-std", "no-std::no-alloc", "rust-patterns"]
